--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@azure/msal-browser": "^4.16.0",
+    "@azure/msal-react": "^3.0.16",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-native-web": "^0.21.0",
     "react-scripts": "5.0.0"
   },
   "scripts": {
